打印跟踪信息 pom

--- a/e-commerce-alibaba-nacos-client/pom.xml
+++ b/e-commerce-alibaba-nacos-client/pom.xml
@@ -75,6 +75,13 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
         </dependency>
+
+        <!-- 通过 sleuth 实现链路追踪-->
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-sleuth</artifactId>
+        </dependency>
+
     </dependencies>
 
     <!--
