--- a/e-commerce-service/e-commerce-service-config/pom.xml
+++ b/e-commerce-service/e-commerce-service-config/pom.xml
@@ -3,28 +3,30 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>e-commerce-springcloud</artifactId>
+        <artifactId>e-commerce-service</artifactId>
         <groupId>org.example</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>e-commerce-mvc-config</artifactId>
+    <artifactId>e-commerce-service-config</artifactId>
+    <version>1.0-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <properties>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
+    </properties>
     <!-- 模块名及描述信息 -->
-    <name>e-commerce-mvc-config</name>
-    <description>通用配置模块</description>
+    <name>e-commerce-service-config</name>
+    <description>服务通用配置</description>
 
     <dependencies>
-        <!-- 引入 Web 功能 -->
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
         <dependency>
             <groupId>org.example</groupId>
-            <artifactId>e-commerce-common</artifactId>
+            <artifactId>e-commerce-mvc-config</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
+
 
 </project>
